--- a/courses.html
+++ b/courses.html
@@ -145,8 +145,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>1</h4>
-                                                <h4>1</h4>
+                                                <h4>To be updated</h4>
+                                                <h4>To be updated</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
