--- a/publications.html
+++ b/publications.html
@@ -129,7 +129,7 @@
                                             &nbsp&nbsp&nbsp- <b>22 papers</b> published in total<br>
                                             &nbsp&nbsp&nbsp- <b>13 consecutive years</b> published (2012-2024)</p>
                                             <p><b><i>Other Top-tier International Conference Papers</i></b> &nbsp  <br>
-                                            &nbsp&nbsp&nbsp- <b>RTAS</b> 8, <b>MobiSys</b> 1, <b>DAC</b> 1, <b>EMSOFT</b> 2, <b>ECRTS</b> 1, <b>ICCAD</b> 1, <b>IJCAI</b> 1, <b>IROS</b> 1, <b>ICCPS</b> 2, <b>ICPR</b> 3, <b>SAC</b> 2, <b>ICPR</b> 3</p>
+                                            &nbsp&nbsp&nbsp- <b>RTAS</b> 8, <b>MobiSys</b> 1, <b>DAC</b> 1, <b>EMSOFT</b> 2, <b>ECRTS</b> 1, <b>ICCAD</b> 1, <b>IJCAI</b> 1, <b>IROS</b> 1, <b>ICCPS</b> 2, <b>ICPR</b> 3, <b>SAC</b> 2</p>
                                             <p><b><i>Top-tier International Journal Papers</i></b> &nbsp<br>
                                             &nbsp&nbsp&nbsp-  <b>TPDS</b> 7, <b>TC</b> 4, <b>TSE</b> 1, <b>IoT-J</b> 2, <b>TECS</b> 1, <b>TVCG</b> 1, <b>RTSJ</b> 2, <b>JSS</b> 8, <b>TVT</b> 1, <b>FGCS</b> 1, <b>TII</b> 1</p></h4>
                                             <br>
