--- a/publications.html
+++ b/publications.html
@@ -235,7 +235,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>EarDVFS: Environment-Adaptable RL-based DVFS for Mobile Devices</h4>
-                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, Sanguen Oh, <strong>Jinkyu Lee</strong>, Insik Shin </div>
+                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, Sangeun Oh, <strong>Jinkyu Lee</strong>, Insik Shin </div>
                                                         <div class="pubcite">The 44th ACM/IEEE International Conference on Computer-Aided Design (ICCAD), To appear, Munich, Germany, October 2025 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
