--- a/jinkyulee.html
+++ b/jinkyulee.html
@@ -473,8 +473,8 @@
                                                       <h4><span class="label label-success">Publications Chair</span> <strong>RTSS 2022, 2023 and 2024</strong></h4>
                                                       <h5>The 43rd, 44th and 45th IEEE Real-Time Systems Symposium</h5>
                                                       <br>
-                                                      <h4><span class="label label-warning">Publicity Co-Chair</span> <strong>RTAS 2025</strong></h4>
-                                                      <h5>The 31st IEEE Real-Time and Embedded Technology and Applications Symposium</h5>
+                                                      <h4><span class="label label-warning">Publicity Co-Chair</span> <strong>RTAS 2025 and 2026</strong></h4>
+                                                      <h5>The 31st and 32nd IEEE Real-Time and Embedded Technology and Applications Symposium</h5>
                                                       <br>
                                                       <h4><span class="label label-warning">Publicity Co-Chair</span> <strong>RTSS 2015 and 2016</strong></h4>
                                                       <h5>The 36th and 37th IEEE Real-Time Systems Symposium</h5>
