--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
                                                     <div class="subject">Prof. Jinkyu Lee is now with Yonsei University.</div>
                                                 </div>
                                             </li>
+
+                                             <li class="open">
+                                                <div class="date">Aug. 2025</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">A paper, entitled "BankTweak: Adversarial Attack against Multi-Object Trackers by Manipulating Feature Banks" was presented in the 34th  International Joint Conference on Artificial Intelligence (IJCAI 2025). </div>
+                                                </div>
+                                            </li>  
                                             
                                             <li class="open">
                                                 <div class="date">May 2025</div>
