--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                                 <div class="date">Sep. 2025</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
-                                                    <div class="subject">Prof. Jinkyu Lee is now with Yonsei University.</div>
+                                                    <div class="subject">[To appear] Prof. Jinkyu Lee is now with Yonsei University.</div>
                                                 </div>
                                             </li>
 
@@ -194,7 +194,7 @@
                                                 <div class="date">Aug. 2025</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
-                                                    <div class="subject">[To be updated] A paper, entitled "BankTweak: Adversarial Attack against Multi-Object Trackers by Manipulating Feature Banks" was presented in the 34th  International Joint Conference on Artificial Intelligence (IJCAI 2025). </div>
+                                                    <div class="subject">[To appear] A paper, entitled "BankTweak: Adversarial Attack against Multi-Object Trackers by Manipulating Feature Banks" was presented in the 34th  International Joint Conference on Artificial Intelligence (IJCAI 2025). </div>
                                                 </div>
                                             </li>  
                                             
