--- a/recruit.html
+++ b/recruit.html
@@ -171,7 +171,7 @@
                                     <br>
                                     <li><p>지도교수와 시간 약속 후 인터뷰 jinkyu DOT lee AT yonsei DOT ac DOT kr </p></li>
                                     <li><p>연구실 적응 기간: 지도교수와 개인미팅을 통해 연구 진행 </p></li>
-                                    <li><p>연구실 적응 기간 이후 개인 공간 및 연구비 제공  </p></li>
+                                    <li><p>연구실 적응 기간 이후 연구비 제공  </p></li>
                                     </ul>
                                     
                                     <br><br>
@@ -182,7 +182,7 @@
                                     <li><p>처음에는 관심 분야 논문 읽기  </p></li>
                                     <li><p>몇달간 논문을 읽으면서 논문 읽는 요령 및 최신기술 습득, 분야 파악  </p></li>
                                     <li><p>자신의 연구 주제 선정 및 진행  </p></li>
-                                    <li><p>학부 졸업논문 작성 및 대학원 연구에 연계 </p></li>
+                                    <li><p>대학원 연구에 연계 </p></li>
                                     </ul>
                                     
 
