--- a/members.html
+++ b/members.html
@@ -144,8 +144,8 @@
 
                                     
 
-                                    <br><li><p style="font-size:18px">Seongtae Lee (이성태), Graduate Student, CSE@SKKU </p> B.S.: CSE@SKKU, 2020.8 <br>M.S.: CSE@SKKU, 2022.8 <br>Email: operatio7770 AT gmail.com</li>
-                                    <br><li><p style="font-size:18px">Seunghoon Lee (이승훈), Graduate Student, CSE@SKKU </p>B.S.: CE@SKKU, 2021.2 <br>M.S.: CSE@SKKU, 2022.8 <br>Email: seunghoon.l AT skku.edu <br>Homepage: <a href="https://seunghoon00.github.io">https://seunghoon00.github.io</a></li>
+                                    <br><li><p style="font-size:18px">Seongtae Lee (이성태), Graduate Student, CSE@SKKU </p> B.S.: CSE@SKKU, 2020.8 <br>M.S.: CSE@SKKU, 2022.8 (Advisor: Jinkyu Lee)<br>Email: operatio7770 AT gmail.com</li>
+                                    <br><li><p style="font-size:18px">Seunghoon Lee (이승훈), Graduate Student, CSE@SKKU </p>B.S.: CE@SKKU, 2021.2 <br>M.S.: CSE@SKKU, 2022.8 (Advisor: Jinkyu Lee)<br>Email: seunghoon.l AT skku.edu <br>Homepage: <a href="https://seunghoon00.github.io">https://seunghoon00.github.io</a></li>
 
 
                                     <br><li><p style="font-size:18px">Hyunwoo Koo (구현우), Graduate Student, CSE@SKKU </p>B.S.: EE@SKKU, 2024.8 </li>
