--- a/publications.html
+++ b/publications.html
@@ -126,12 +126,12 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <h4><b><i>IEEE Real-Time Systems Symposium</i> (RTSS)</b>: <b><i>Top 1 RT conference, BK21+ IF4, around 30 papers yearly published</i></b> <br>
-                                            &nbsp&nbsp&nbsp- <b>22 papers</b> published in total<br>
-                                            &nbsp&nbsp&nbsp- <b>13 consecutive years</b> published (2012-2024)</p>
+                                            &nbsp&nbsp&nbsp- <b>23 papers</b> published in total<br>
+                                            &nbsp&nbsp&nbsp- <b>14 consecutive years</b> published (2012-2025)</p>
                                             <p><b><i>Other Top-tier International Conference Papers</i></b> &nbsp  <br>
                                             &nbsp&nbsp&nbsp- <b>RTAS</b> 8, <b>MobiSys</b> 1, <b>DAC</b> 1, <b>EMSOFT</b> 2, <b>ECRTS</b> 1, <b>ICCAD</b> 1, <b>IJCAI</b> 1, <b>IROS</b> 1, <b>ICCPS</b> 2, <b>ICPR</b> 3, <b>SAC</b> 2</p>
                                             <p><b><i>Top-tier International Journal Papers</i></b> &nbsp<br>
-                                            &nbsp&nbsp&nbsp-  <b>TPDS</b> 7, <b>TC</b> 4, <b>TSE</b> 1, <b>IoT-J</b> 2, <b>TECS</b> 1, <b>TVCG</b> 1, <b>RTSJ</b> 2, <b>JSS</b> 8, <b>TVT</b> 1, <b>FGCS</b> 1, <b>TII</b> 1</p></h4>
+                                            &nbsp&nbsp&nbsp-  <b>TPDS</b> 7, <b>TC</b> 4, <b>TSE</b> 1, <b>IoT-J</b> 2, <b>TECS</b> 1, <b>TVCG</b> 1, <b>RTSJ</b> 3, <b>JSS</b> 8, <b>TVT</b> 1, <b>FGCS</b> 1, <b>TII</b> 1</p></h4>
                                             <br>
                                         </div> 
                                     </div>
@@ -181,6 +181,42 @@
                                             <ol reversed="reversed" class="normal">
 <!-------------------------------- Selected -------------------------------->
 
+                                     <div class="item mix cpaper spaper" data-year="202512">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="fa fa-expand"></i>
+                                                            </a>
+                                                            <!--<a href="" class="tooltips" title="Bib" target="_blank">
+                                                                <i class="fa fa-file-alt"></i>
+                                                            </a>-->
+                                                            <a href="https://doi.org/10.1109/" class="tooltips" title="Link" target="_blank">
+                                                                <i class="fa fa-external-link"></i>
+                                                            </a>
+                                                            <a href="./papers/.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
+                                                        </div>
+                                                        <h4 class="pubtitle"><li>Recursive Partitioned Scheduling for Real-Time Gang Tasks</h4>
+                                                        <div class="pubauthor"> <strong>Seongtae Lee</strong>, Nan Guan, and <strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubcite">The 46th IEEE Real-Time Systems Symposium (RTSS), To appear, Boston, MA, USA, December 2025 </div>
+                                                        <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
+                                                    </div>     
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p> 
+                                                        </p>
+                                                        <br>
+                                                        <h4>Bibtex</h4>
+                                                        <p>
+                                                        </p>
+                                                        <br>
+                                                        <h4>Conference Information</h4>
+                                                        <p>
+                                                        </p>
+                                                    </div>  
+                                                </div>
+
                                                 <div class="item mix cpaper spaper" data-year="202510">
                                                     <div class="pubmain">
                                                         <div class="pubassets">
@@ -198,7 +234,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>Masked Autoencoders are Robust Task Offloaders for Timely and Accurate Inference</h4>
-                                                        <div class="pubauthor"> <strong>Wonyeong Lee</strong>, <strong>Seunghoon Lee</strong>, <strong>Seungyeon Cho</strong>, <strong>Hyunwoo Koo</strong>, Hoon Sung Chwa, <strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubauthor"> <strong>Wonyeong Lee</strong>, <strong>Seunghoon Lee</strong>, <strong>Seungyeon Cho</strong>, <strong>Hyunwoo Koo</strong>, Hoon Sung Chwa, and <strong>Jinkyu Lee</strong></div>
                                                         <div class="pubcite">The 38th IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), To appear, Hangzhou, China, October 2025 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
@@ -235,7 +271,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>EarDVFS: Environment-Adaptable RL-based DVFS for Mobile Devices</h4>
-                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, Sangeun Oh, <strong>Jinkyu Lee</strong>, Insik Shin </div>
+                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, Sangeun Oh, <strong>Jinkyu Lee</strong>, and Insik Shin </div>
                                                         <div class="pubcite">The 44th ACM/IEEE International Conference on Computer-Aided Design (ICCAD), To appear, Munich, Germany, October 2025 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
@@ -272,7 +308,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>BankTweak: Adversarial Attack against Multi-Object Trackers by Manipulating Feature Banks</h4>
-                                                        <div class="pubauthor"> Woojin Shin, Donghwa Kang, Daejin Choi,  Brent Byunghoon Kang, <strong>Jinkyu Lee</strong>, Hyeongboo Baek </div>
+                                                        <div class="pubauthor"> Woojin Shin, Donghwa Kang, Daejin Choi,  Brent Byunghoon Kang, <strong>Jinkyu Lee</strong>, and Hyeongboo Baek </div>
                                                         <div class="pubcite">The 34th International Joint Conference on Artificial Intelligence (IJCAI), To appear, Montreal, Canada, August 2025 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
@@ -287,6 +323,46 @@
                                                         <br>
                                                         <h4>Conference Information</h4>
                                                         <p>
+                                                        </p>
+
+                                                    </div>
+                                                </div>
+
+
+                                                <div class="item mix jpaper spaper" data-year="202506">
+                                                    <div class="pubmain">
+                                                      <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="fa fa-expand"></i>
+                                                            </a>
+                                                            <!--<a href="" class="tooltips" title="Bib" target="_blank">
+                                                                <i class="fa fa-file-alt"></i>
+                                                            </a>-->
+                                                            <a href="https://link.springer.com/article/10.1007/s11241-025-09445-9" class="tooltips" title="Link" target="_blank">
+                                                                <i class="fa fa-external-link"></i>
+                                                            </a>
+                                                            <a href="./papers/IJ202506LKB.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
+                                                        </div>
+                                                        <h4 class="pubtitle"><li>Timing Guarantees for Inference of AI Models in Embedded Systems</h4>
+                                                        <div class="pubauthor"> <strong>Seunghoon Lee</strong>, Woosung Kang, Marko Bertogna, Hoon Sung Chwa and <strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubcite">Real-Time Systems (RTSJ), Volume 61, Issue 2, pp. 259-267, June 2025</div>
+                                                        <span class="label label-primary">Selected</span><span class="label label-success">Journal Paper</span>
+                                                    </div>
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p>
+                                                            Machine learning (ML) is increasingly being integrated into real-time embedded systems, enabling intelligent decision-making in applications such as autonomous driving and industrial automation. However, ensuring predictable execution of deep neural network (DNN) inference remains a major challenge, as real-time systems must meet strict timing constraints to guarantee safety and reliability. This paper identifies key challenges in achieving real-time AI inference in embedded systems, including limited memory capacity, high energy consumption, efficient multi-DNN scheduling, and heterogeneous resource management. To address these challenges, we emphasize the need for advanced scheduling algorithms to efficiently allocate heterogeneous computing resources across multiple DNNs, hierarchical memory management to reduce memory bottlenecks, and real-time neural architecture search and optimization techniques to enhance AI model performance under strict timing constraints. Furthermore, we discuss future research directions aimed at improving real-time AI execution, including time-predictable scheduling frameworks to ensure consistent inference latency, cross-device AI workload management to optimize resource utilization across heterogeneous processors, and benchmarking methodologies to systematically evaluate performance, timing guarantees, and energy efficiency in real-time AI systems. Advancing these research areas will enhance the reliability, efficiency, and scalability of AI-driven embedded systems, bridging the gap between ML advancements and real-time system requirements.
+                                                        </p>
+                                                        <br>
+                                                        <h4>Bibtex</h4>
+                                                        <p>
+                                                        </p>
+                                                        <br>
+                                                        <h4>Journal Information</h4>
+                                                        <p>
+                                                        ISSN: 1551-3203
                                                         </p>
 
                                                     </div>
@@ -309,7 +385,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>Scheduling EV Battery Swap/Charge Operations</h4>
-                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, <strong>Seongtae Lee</strong>, Kang G. Shin, <strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, <strong>Seongtae Lee</strong>, Kang G. Shin, and <strong>Jinkyu Lee</strong></div>
                                                         <div class="pubcite">The 31st IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), pp. 151-163, Irvine, CA, USA, 8th May 2024 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
