--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                                 
 
                                             <li class="open">
-                                                <div class="date">2012-2024</div>
+                                                <div class="date">2012-2025</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
-                                                    <div class="subject">Prof. Jinkyu Lee published his papers at IEEE RTSS (Real-Time Systems Symposium) for 13 consecutive years.                                                    
+                                                    <div class="subject">Prof. Jinkyu Lee published his papers at IEEE RTSS (Real-Time Systems Symposium) for 14 consecutive years.                                                    
                                                 </div>
                                             </li>
                                             
@@ -189,6 +189,12 @@
                                                     <div class="subject">[To appear] Prof. Jinkyu Lee is now with Yonsei University.</div>
                                                 </div>
                                             </li>
+
+                                </ul>
+                                <br>
+                                <hr>
+                                <br>
+                                <ul class="timeline">
 
                                              <li class="open">
                                                 <div class="date">Aug. 2025</div>
